--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -27,12 +27,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install semgrep
 
-      - name: Run Semgrep SAST (OWASP Top 10 rules)
-        run: |
-          semgrep \
-            --config p/owasp-top-ten \
-            --error \
-            --sarif --output semgrep-results.sarif
+      - name: Run Semgrep SAST (auto rules)
+  run: |
+    semgrep ci \
+      --config auto \
+      --sarif --output semgrep-results.sarif
 
       - name: Upload SARIF to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
