--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -2,16 +2,16 @@ name: SAST - Semgrep
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 jobs:
   semgrep:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
-      security-events: write   # allows uploading SARIF to Security tab
+      security-events: write
 
     steps:
       - name: Checkout repository
@@ -20,18 +20,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install Semgrep
         run: |
           python -m pip install --upgrade pip
           pip install semgrep
 
-      - name: Run Semgrep SAST (OSS Rules)
-  run: |
-    semgrep ci \
-      --config auto \
-      --sarif --output semgrep-results.sarif
+      - name: Run Semgrep SAST (OSS rules)
+        run: |
+          semgrep ci \
+            --config auto \
+            --sarif --output semgrep-results.sarif
 
       - name: Upload SARIF to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
