--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -27,7 +27,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install semgrep
 
-      - name: Run Semgrep SAST (OSS rules)
+            - name: Run Semgrep SAST (OSS rules)
+        continue-on-error: true
         run: |
           semgrep ci \
             --config auto \
