--- a/.github/workflows/dast-zap-canonicalization.yml
+++ b/.github/workflows/dast-zap-canonicalization.yml
@@ -14,17 +14,18 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "20"
 
       - name: Start Canonicalization app
         working-directory: canonicalization-example
         run: |
           npm install
           npm start &
-          npx wait-on http://localhost:3001
+          # give the app time to boot so ZAP can hit it
+          sleep 20
 
       - name: Run OWASP ZAP full scan (Canonicalization)
         uses: zaproxy/action-full-scan@v0.8.0
         with:
-          target: "http://host.docker.internal:3001"
+          target: "http://host.docker.internal:4000"
           cmd_options: "-a"
