--- a/.github/workflows/dast-zap-canonicalization.yml
+++ b/.github/workflows/dast-zap-canonicalization.yml
@@ -24,8 +24,9 @@ jobs:
           # give the app time to boot so ZAP can hit it
           sleep 20
 
-      - name: Run OWASP ZAP full scan (Canonicalization)
+            - name: Run OWASP ZAP full scan (Canonicalization)
         uses: zaproxy/action-full-scan@v0.8.0
         with:
           target: "http://host.docker.internal:4000"
           cmd_options: "-a"
+          allow_issue_writing: false
