--- a/.github/workflows/dast-zap-canonicalization.yml
+++ b/.github/workflows/dast-zap-canonicalization.yml
@@ -22,9 +22,10 @@ jobs:
           npm start &
           sleep 20
 
-      - name: Run OWASP ZAP full scan (Canonicalization)
+            - name: Run OWASP ZAP full scan (Canonicalization)
         uses: zaproxy/action-full-scan@v0.8.0
         with:
           target: "http://host.docker.internal:4000"
           cmd_options: "-a"
           allow_issue_writing: false
+          artifact_name: "canonicalization-zap-report"
