--- a/.github/workflows/dast-zap-canonicalization.yml
+++ b/.github/workflows/dast-zap-canonicalization.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   zap_scan_canonicalization:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -13,19 +14,20 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
 
       - name: Start Canonicalization app
         working-directory: canonicalization-example
         run: |
           npm install
           npm start &
+          # give the app time to boot so ZAP can hit it
           sleep 20
 
-            - name: Run OWASP ZAP full scan (Canonicalization)
+      - name: Run OWASP ZAP full scan (Canonicalization)
         uses: zaproxy/action-full-scan@v0.8.0
         with:
-          target: "http://host.docker.internal:4000"
-          cmd_options: "-a"
+          target: 'http://host.docker.internal:4000'
+          cmd_options: '-a'
           allow_issue_writing: false
-          artifact_name: "canonicalization-zap-report"
+          artifact_name: canonicalization-zap-report
