--- a/.github/workflows/dast-canonicalization.yml
+++ b/.github/workflows/dast-canonicalization.yml
@@ -2,29 +2,30 @@ name: DAST - Canonicalization Example
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - 'canonicalization-example/**'
+      - '.github/workflows/dast-canonicalization.yml'
 
 jobs:
   zap_scan_canonicalization:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
       - name: Start Canonicalization app
         working-directory: canonicalization-example
         run: |
           npm install
           npm start &
-          # give the app time to boot so ZAP can hit it
           sleep 20
-
-            - name: Run OWASP ZAP full scan (Canonicalization)
+      - name: Run OWASP ZAP full scan (Canonicalization)
         uses: zaproxy/action-full-scan@v0.8.0
         with:
           target: "http://host.docker.internal:4000"
