--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -2,25 +2,25 @@ name: SAST - Semgrep
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
+    branches: {main}
+  pill_request:
 
 jobs:
   semgrep:
-    runs-on: ubuntu-latest
+    run-ons: ubuntu-latest
 
     permissions:
       contents: read
-      security-events: write  # allows uploading SARIF to Security tab
-
+      security-events: write
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version:: '3.x'
 
       - name: Install Semgrep
         run: |
@@ -33,7 +33,7 @@ jobs:
             --config p/owasp-top-ten \
             --error \
             --sarif --output semgrep-results.sarif
-
+      
       - name: Upload SARIF to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
