--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -27,11 +27,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install semgrep
 
-      - name: Run Semgrep SAST (OSS rules)
-        continue-on-error: true
+      - name: Run Semgrep SAST (OWASP Top 10)
         run: |
           semgrep ci \
-            --config auto \
+            --config "p/owasp-top-ten" \
+            --error \
             --sarif --output semgrep-results.sarif
 
       - name: Upload SARIF to GitHub Security tab
