--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           semgrep ci \
             --config "p/owasp-top-ten" \
-            --strict \
+            --severity-error \
             --sarif --output semgrep-results.sarif
 
       - name: Upload SARIF to GitHub Security tab
