--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -31,6 +31,9 @@ jobs:
         run: |
           semgrep ci \
             --config "p/owasp-top-ten" \
+            --include "canonicalization-example/**" \
+            --include "idor/**" \
+            --include "fastbank-auth-lab/**" \
             --sarif --output semgrep-results.sarif
 
       - name: Upload SARIF to GitHub Security tab
