--- a/.github/workflows/dast-zap.yml
+++ b/.github/workflows/dast-zap.yml
@@ -1,34 +1,34 @@
-name: DAST - Fastbank Auth Lab
+name: DAST - OWASP ZAP Full Scan
 
 on:
   workflow_dispatch:
 
 jobs:
-  dast_fastbank_scan:
+  zap_full_scan:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Configure Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
 
       - name: Install dependencies
-        working-directory: fastbank-auth-lab
+        working-directory: fastbank_insecure_classwork/backend
         run: npm install
 
       - name: Start application
-        working-directory: fastbank-auth-lab
+        working-directory: fastbank_insecure_classwork/backend
         run: |
           npm start &
           sleep 20
 
-      - name: Run OWASP ZAP scan
+      - name: Execute ZAP scan
         uses: zaproxy/action-full-scan@v0.13.0
         with:
-          target: http://localhost:3001
+          target: http://host.docker.internal:3000
           fail_action: true
           allow_issue_writing: false
