--- a/.github/workflows/canonicalization.yml
+++ b/.github/workflows/canonicalization.yml
@@ -1,34 +1,32 @@
-name: DAST - Canonicalization Scan
+name: DAST - Canonicalization Example Scan
 
 on:
   workflow_dispatch:
 
 jobs:
-  dast_canonicalization_scan:
+  zap_scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "20.x"
 
-      - name: Install dependencies
+      - name: Install lab dependencies
         working-directory: canonicalization-example
         run: npm install
 
-      - name: Start app
+      - name: Start vulnerable app
         working-directory: canonicalization-example
-        run: |
-          npm start &
-          sleep 20
+        run: npm start & sleep 25
 
-      - name: Run OWASP ZAP scan
+      - name: Run OWASP ZAP full scan
         uses: zaproxy/action-full-scan@v0.13.0
         with:
-          target: http://localhost:4000
+          target: "http://localhost:4000"
           fail_action: true
           allow_issue_writing: false
