--- a/.github/workflows/fastbank.yml
+++ b/.github/workflows/fastbank.yml
@@ -1,34 +1,32 @@
-name: DAST - Fastbank Auth Lab
+name: DAST - Fastbank Auth Lab Scan
 
 on:
   workflow_dispatch:
 
 jobs:
-  dast_fastbank_scan:
+  zap_scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "20.x"
 
-      - name: Install dependencies
+      - name: Install lab dependencies
         working-directory: fastbank-auth-lab
         run: npm install
 
-      - name: Start application
+      - name: Start vulnerable app
         working-directory: fastbank-auth-lab
-        run: |
-          npm start &
-          sleep 20
+        run: npm start & sleep 22
 
-      - name: Run OWASP ZAP scan
+      - name: Run OWASP ZAP full scan
         uses: zaproxy/action-full-scan@v0.13.0
         with:
-          target: http://localhost:3001
+          target: "http://localhost:3001"
           fail_action: true
           allow_issue_writing: false
