--- a/.github/workflows/idor.yml
+++ b/.github/workflows/idor.yml
@@ -4,31 +4,29 @@ on:
   workflow_dispatch:
 
 jobs:
-  idor_dast_scan:
+  zap_scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "20.x"
 
-      - name: Install dependencies
+      - name: Install lab dependencies
         working-directory: idor
         run: npm install
 
-      - name: Start application
+      - name: Start vulnerable app
         working-directory: idor
-        run: |
-          npm start &
-          sleep 20
+        run: npm start & sleep 24
 
-      - name: Run ZAP scan
+      - name: Run OWASP ZAP full scan
         uses: zaproxy/action-full-scan@v0.13.0
         with:
-          target: http://localhost:3000
+          target: "http://localhost:3000"
           fail_action: true
           allow_issue_writing: false
