--- a/.github/workflows/canonicalization.yml
+++ b/.github/workflows/canonicalization.yml
@@ -14,19 +14,23 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: '20'
 
       - name: Install lab dependencies
         working-directory: canonicalization-example
-        run: npm install
+        run: |
+          npm install
 
       - name: Start vulnerable app
         working-directory: canonicalization-example
-        run: npm start & sleep 25
+        run: |
+          npm start &
+          # wait for the server to boot
+          sleep 20
 
       - name: Run OWASP ZAP full scan
         uses: zaproxy/action-full-scan@v0.13.0
         with:
-          target: "http://localhost:4000"
+          target: 'http://localhost:4000'
           fail_action: true
           allow_issue_writing: false
