--- a/.github/workflows/fastbank.yml
+++ b/.github/workflows/fastbank.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "20"
 
       - name: Install lab dependencies
         working-directory: fastbank-auth-lab
