--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -2,7 +2,7 @@ name: SAST - Semgrep
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
   pull_request:
 
 jobs:
@@ -11,7 +11,7 @@ jobs:
 
     permissions:
       contents: read
-      security-events: write
+      security-events: write  # allows uploading SARIF to Security tab
 
     steps:
       - name: Checkout repository
@@ -20,14 +20,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: '3.x'
 
       - name: Install Semgrep
         run: |
           python -m pip install --upgrade pip
           pip install semgrep
 
-      - name: Run Semgrep SAST scan
+      - name: Run Semgrep SAST (OWASP Top 10 rules)
         run: |
           semgrep \
             --config p/owasp-top-ten \
