--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -2,7 +2,7 @@ name: SAST - Semgrep
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
 
 jobs:
@@ -11,12 +11,12 @@ jobs:
 
     permissions:
       contents: read
-      security-events: write  # allows uploading SARIF to Security tab
-
+      security-events: write
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -33,8 +33,11 @@ jobs:
             --config p/owasp-top-ten \
             --error \
             --sarif --output semgrep-results.sarif
-
+        continue-on-error: true
+      
       - name: Upload SARIF to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep-results.sarif
+          category: semgrep-owasp
+        continue-on-error: true
